force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/Is_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Is_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if a Product is a Consumer Product</description>
    <label>Is Consumer</label>
    <type>Checkbox</type>
</CustomField>