force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/Is_SBA__c.field-meta.xml
<CustomField>
    <fullName>Is_SBA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if Product is SBA</description>
    <label>Is SBA</label>
    <type>Checkbox</type>
</CustomField>