force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Allow_Negative_Odd_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Allow_Negative_Odd_Days__c</fullName>
    <description>Administrators and users populate this optional picklist field to determine if a loan applies negative odd days interest if the first payment is less than one unit period away from the projected close date.</description>
    <inlineHelpText>Select to allow negative odd days interest.</inlineHelpText>
    <label>Allow Negative Odd Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Allow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>