force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Allow_Participation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Allow_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional boolean field is manually entered. When true, this allows the associated product to be flagged and tracked as a participation.</description>
    <label>Allow Participation</label>
    <type>Checkbox</type>
</CustomField>