force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Annual_Operating_Cost__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Operating_Cost__c</fullName>
    <description>The annual cost involved in originating, servicing, and supporting a deposit product.</description>
    <label>Annual Operating Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>