force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__APR_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__APR_Method__c</fullName>
    <description>The user populates this optional picklist field with the APR method to associate with an APR calculation. By default, it is blank.</description>
    <inlineHelpText>Select the APR method you would like to associate with your APR calculation.</inlineHelpText>
    <label>APR Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenEnd</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_360_IRR</fullName>
            </value>
            <value>
                <fullName>YieldPeriod_UnitPeriod_IRR</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>Actuarial</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_360</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_365</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_DaysPerPeriod</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_True360_360</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_True360_365</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_True360_DaysPerPeriod</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_FederalCalendar</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_365.25</fullName>
            </value>
            <value>
                <fullName>UnitPeriod_True360_365.25</fullName>
            </value>
            <value>
                <fullName>Actual_360</fullName>
            </value>
            <value>
                <fullName>True365_360</fullName>
            </value>
            <value>
                <fullName>Actual_365</fullName>
            </value>
            <value>
                <fullName>True365_365</fullName>
            </value>
            <value>
                <fullName>Actual_Actual</fullName>
            </value>
            <value>
                <fullName>Midnight_366</fullName>
            </value>
            <value>
                <fullName>Actual_365.25</fullName>
            </value>
            <value>
                <fullName>US_Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>