force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Capitalize_Interest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Capitalize_Interest__c</fullName>
    <description>The user populates this optional picklist to determine if the interest on a loan is capitalized for the specified product. By default, it is blank.</description>
    <inlineHelpText>This field determines if the interest on your loan is capitalized for the product feature.</inlineHelpText>
    <label>Capitalize Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>