force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Checking_Withdrawal_Notice__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Checking_Withdrawal_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional checkbox field is manually populated during configuration and is used as an indicator flag for document preparation.</description>
    <label>Checking Withdrawal Notice</label>
    <type>Checkbox</type>
</CustomField>