force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Collect_Odd_Days_Interest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collect_Odd_Days_Interest__c</fullName>
    <description>Administrators and users populate this optional picklist field to determine if a loan applies odd days interest and when that interest applies to the loan.</description>
    <inlineHelpText>Select an option to collect odd days interest.</inlineHelpText>
    <label>Collect Odd Days Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add to First Payment</fullName>
            </value>
            <value>
                <fullName>Collect When Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>