force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Commercial__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been deprecated in favor of Is Commercial. It was used as a flag and never had code written around it.</description>
    <label>Commercial</label>
    <type>Checkbox</type>
</CustomField>