force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Construction_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Construction_Note_Type__c</fullName>
    <description>This picklist is used to indicate a product feature that specifies the construction note type.</description>
    <inlineHelpText>Specifies the construction note type.</inlineHelpText>
    <label>Construction Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Only</fullName>
            </value>
            <value>
                <fullName>Construction and Permanent Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>