force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Cost_of_Deposit_Capital__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_of_Deposit_Capital__c</fullName>
    <description>The approximate annual cost of capital represented as a percentage of the dollar amount kept in reserves for a deposit product.</description>
    <label>Cost of Deposit Capital</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>