force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Cost_Of_Equity_Kd__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Of_Equity_Kd__c</fullName>
    <description>This field is derived by a Financial Institution&apos;s internal models. It is the cost that represents the compensation the market demands in exchange for owning the asset before taking taxes into account.</description>
    <label>Cost of Debt (Kd)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>