force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Cost_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_Per_Day__c</fullName>
    <description>The Administrator configures this optional currency field to display the estimated cost per day of the product. When this field is used for credit protection products, it displays the estimated cost per day per $1000 of the loan.</description>
    <inlineHelpText>This field displays the estimated daily cost of the product. For credit protection products, this field displays the estimated daily cost per $1000 of the loan.</inlineHelpText>
    <label>Cost Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>