force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Create_Applications__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Create_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. When enabled an application record will be created for products which have this product feature. When disabled, an application record will not be created for products with this feature. By default, it is disabled.</description>
    <inlineHelpText>Check to enable application record creation for products.</inlineHelpText>
    <label>Create Applications</label>
    <type>Checkbox</type>
</CustomField>