force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Credit_Protection_Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Protection_Cost_Code__c</fullName>
    <description>Administrators populate this field to indicate the level of coverage or pricing for Credit Protection products. By default, it is blank.</description>
    <inlineHelpText>This field displays the level of coverage or pricing of the selected insurance.</inlineHelpText>
    <label>Credit Protection Cost Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>