force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Deposit_FTP__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_FTP__c</fullName>
    <description>The funds transfer pricing (FTP) the bank recognizes as revenue for a deposit product as a percentage.</description>
    <label>Deposit Funds Transfer Pricing</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>