force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Deposit_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Reserve_Rate__c</fullName>
    <description>The percentage of the average balance for a deposit product that a bank keeps in reserve to meet short or long term liquidity obligations.</description>
    <label>Deposit Reserve Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>