force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Deposit_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Tax_Rate__c</fullName>
    <description>The annual tax rate applied to the net deposit revenue as a percentage.</description>
    <label>Deposit Tax Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>