force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Effect_of_Rate_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effect_of_Rate_Change_Type__c</fullName>
    <description>User selects a value from this optional picklist to identify how interest rate changes affect the loan program. By default, it is blank.</description>
    <inlineHelpText>Select a change in interest rate to see how it affects the loan.</inlineHelpText>
    <label>Effect of Rate Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Amount</fullName>
            </value>
            <value>
                <fullName>Maturity</fullName>
            </value>
            <value>
                <fullName>Loan Term</fullName>
            </value>
            <value>
                <fullName>Payment and Maturity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>