force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Exclude_From_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_From_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected. It specifies whether the product will be excluded from the relationship statistics calculations. When selected, this loan will be excluded from Relationship Statistics.</description>
    <label>Exclude From Exposure</label>
    <type>Checkbox</type>
</CustomField>