force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Exclude_From_LoanProducts__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_From_LoanProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to exclude the products with this product feature from the relevant product selection page. By default, it is false.</description>
    <inlineHelpText>This field excludes all associated Product__c records from the Choose Product Picklist on the LoanProducts VisualForce page.</inlineHelpText>
    <label>Exclude from Products</label>
    <type>Checkbox</type>
</CustomField>