force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Financed_Fee_Calculations__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financed_Fee_Calculations__c</fullName>
    <description>The nCino Administrator populates this picklist field to indicate the initial state of the Financed Fee Calculations picklist on new loans created. At install, this field defaults to null for existing product features and Manual Calculation for new product features.</description>
    <inlineHelpText>Select value from this picklist to add or subtract financed fees from loan amount, or manually calculate.</inlineHelpText>
    <label>Financed Fee Calculations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Calculation</fullName>
                <default>true</default>
                <label>Manual Calculation</label>
            </value>
            <value>
                <fullName>Add to Loan Amount</fullName>
            </value>
            <value>
                <fullName>Subtract From Loan Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>