force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Home_Lending_Compliance_Calculations__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Home_Lending_Compliance_Calculations__c</fullName>
    <description>The user populates this picklist to indicate Home Lending compliance calculations are required for the loan. Examples of compliance calculations specific to U.S. Home Lending are Regulation Z and HOEPA High-Cost Mortgage and Higher-Priced Mortgage Loan.</description>
    <inlineHelpText>This field indicates if loans originated for this product require Home Lending compliance calculations.</inlineHelpText>
    <label>Home Lending Compliance Calculations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>HPML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>