force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Initial_Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Interest_Rate_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies what kind of rate is used to determine the initial rate of interest on the account.</description>
    <inlineHelpText>Specifies what kind of rate is used to determine the initial rate of interest on the account.</inlineHelpText>
    <label>Initial Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>