force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Initial_Rate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Rate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, an initial rate (i.e. a teaser rate) was applied to the account. If disabled, this field is not used. By default, it is disabled.</description>
    <inlineHelpText>If true an initial rate (i.e. a teaser rate) was applied to the account.</inlineHelpText>
    <label>Initial Rate Indicator</label>
    <type>Checkbox</type>
</CustomField>