force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Interest_Rate_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
    <description>The user populates this optional field. The system adds this percentage to the index to determine the applicable rate for the account.</description>
    <inlineHelpText>This percentage that is added to the index to determine the applicable rate for the account.</inlineHelpText>
    <label>Interest Rate Margin Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>